# fermi

./: .gitignore  Cargo.toml  README.md  setup.sh  tarpaulin.toml
benchmark-gdex/: Cargo.toml
benchmark-gdex/src/: bench_helper.rs  benchmark_gdex.rs  benchmark_gdex_client.rs  benchmark_orderbook_client.rs
benchmark-narwhal/: Cargo.toml  README.md
benchmark-narwhal/src/: benchmark_narwhal_client.rs  execution_state.rs  lib.rs  main.rs
benchmark-narwhal/tests/: node_smoke_test.rs  reconfigure.rs
cli/: Cargo.toml  build.rs
cli/src/: cli_tests.rs  command.rs  lib.rs  main.rs
cli/src/unit_tests/: cli_tests.rs
controller/: Cargo.toml  README.md
controller/src/: bank.rs  consensus.rs  controller.rs  lib.rs  master.rs  spot.rs  stake.rs
core/: Cargo.toml  README.md
core/benchmark-gdex/src/: benchmark_gdex_client.rs  benchmark_orderbook_client.rs  lib.rs
core/cli/src/: command.rs
core/core/src/: metrics.rs  multiaddr.rs
core/core/src/config/: consensus.rs  node.rs
core/core/src/relayer/: spawner.rs
core/engine/src/: validation.rs
core/src/: block.rs  client.rs  genesis_ceremony.rs  hash_clock.rs  lib.rs  merkle.rs  metrics.rs  multiaddr.rs  transaction.rs  vote_cert.rs
core/src/builder/: config.rs  genesis_state.rs  mod.rs  network_config.rs  server.rs
core/src/catchup/: manager.rs  mod.rs
core/src/config/: builder.rs  consensus.rs  gateway.rs  genesis.rs  genesis_ceremony.rs  genesis_config.rs  mod.rs  network.rs  node.rs  server.rs
core/src/relay/: server.rs  spawner.rs
core/src/relayer/: mod.rs  server.rs  spawner.rs
core/src/validator/: consensus_adapter.rs  genesis.rs  genesis_state.rs  metrics.rs  mod.rs  restarter.rs  server.rs  spawn.rs  spawner.rs  state.rs
core/suite/tests/: controller.rs
crypto/: Cargo.toml  README.md
crypto-derive/: Cargo.toml
crypto-derive/src/: hasher.rs  lib.rs  unions.rs
crypto/benches/: ed25519.rs
crypto/src/: compat.rs  ed25519.rs  error.rs  hash.rs  lib.rs  multi_ed25519.rs  tags.rs  test_utils.rs  traits.rs  x25519.rs
engine/: Cargo.toml  README.md
engine/benches/: engine_bench.rs
engine/db.rocks/: 000048.sst  000050.sst  IDENTITY  LOG  LOG.old.1657123974390711  LOG.old.1657124097061610  LOG.old.1657126064262967  LOG.old.1657126137807358  MANIFEST-000042
engine/src/: domain.rs  lib.rs  order_book.rs  order_queues.rs  orderbook.rs  orders.rs  sequence.rs  validation.rs
fermi-tenex-rs/node/: Cargo.toml
gdex-rs/controller/: Cargo.toml  build.rs
gdex-rs/controller/src/: lib.rs  router.rs
gdex-rs/controller/src/bank/: controller.rs  proto.rs  rpc_server.rs  types.rs
gdex-rs/controller/src/bank/proto/: bank_proto.proto
gdex-rs/controller/src/consensus/: controller.rs
gdex-rs/controller/src/futures/: controller.rs  rpc_server.rs  test.rs  utils.rs
gdex-rs/controller/src/spot/: controller.rs
gdex-rs/controller/src/stake/: controller.rs  mod.rs  types.rs
gdex-rs/core/: Cargo.toml  README.md
gdex-rs/core/src/: client.rs  genesis_ceremony.rs  lib.rs  multiaddr.rs
gdex-rs/core/src/builder/: genesis_state.rs  network_config.rs  server.rs
gdex-rs/core/src/config/: consensus.rs  gateway.rs  genesis.rs  mod.rs  network.rs  node.rs  server.rs
gdex-rs/core/src/json_rpc/: open_rpc_generator.rs  processor.rs  server.rs  spawner.rs
gdex-rs/core/src/validator/: consensus_adapter.rs  genesis_state.rs  metrics.rs  server.rs  spawner.rs  state.rs
node/: Cargo.toml  README.md  build.rs
node/proto/: faucet.proto
node/src/: benchmark_client.rs  faucet_pinger.rs  faucet_server.rs  generate_format.rs  main.rs  relay_pinger.rs  relay_server.rs
node/tests/: node_smoke_test.rs
proc/: Cargo.toml  README.md
proc/benches/: proc_bench.rs
proc/src/: account.rs  asset.rs  bank.rs  lib.rs  master.rs  spot.rs  stake.rs
rust-gdex/controller/: Cargo.toml  build.rs
rust-gdex/controller/src/: bank.rs  consensus.rs  controller.rs  event_manager.rs  lib.rs  main_controller.rs  master.rs  router.rs  spot.rs  stake.rs
rust-gdex/controller/src/bank/: controller.rs  mod.rs  proto.rs  rpc_server.rs
rust-gdex/controller/src/consensus/: controller.rs
rust-gdex/controller/src/futures/: controller.rs  mod.rs  proto.rs  test.rs  tester.rs  types.rs  utils.rs
rust-gdex/controller/src/spot/: controller.rs  mod.rs  proto.rs
rust-gdex/controller/src/stake/: controller.rs
rust-gdex/core/: Cargo.toml
rust-gdex/core/src/: client.rs  genesis_ceremony.rs  lib.rs  multiaddr.rs
rust-gdex/core/src/builder/: genesis_state.rs  mod.rs  network_config.rs
rust-gdex/core/src/catchup/: manager.rs
rust-gdex/core/src/config/: genesis.md  mod.rs  network.rs  node.rs  server.rs
rust-gdex/core/src/json_rpc/: mod.rs  open_rpc_generator.rs  processor.rs  server.rs  spawner.rs
rust-gdex/core/src/relayer/: server.rs  spawner.rs
rust-gdex/core/src/validator/: genesis_state.rs  metrics.rs  mod.rs  post_process.rs  restarter.rs  server.rs  spawner.rs  state.rs
server/: Cargo.toml  build.rs
server/src/: api.rs  codec.rs  gdex.validator.ValidatorAPI.rs  lib.rs
suite/: Cargo.toml  README.md
suite/benches/: concurrency.rs  ed25519.rs  engine.rs  engine_bench.rs  hash.rs  orderbook.rs  orderbook_bench.rs  proc_bench.rs  proc_bench_with_db.rs  serialization.rs  toy_consensus.rs  validator.rs  whole-shebang.rs
suite/db.rocks/: IDENTITY  LOG  LOG.old.1657145791038406  LOG.old.1657146096335745  LOG.old.1657146185530647  LOG.old.1657146245647490  MANIFEST-000026  OPTIONS-000029
suite/src/: lib.rs
suite/src/test_utils/: mod.rs  test_cluster.rs
suite/tests/: cluster.rs  controller.rs  core.rs  crypto.rs  engine.rs  proc.rs  spot.rs  stake.rs  tps.rs  whole-shebang.rs
types/: Cargo.toml  README.md  build.rs
types/proto/: bank_requests.proto  block.proto  gdex.proto  new_block.proto  new_transaction.proto  relay.proto  services.proto  spot_requests.proto  transaction.proto
types/src/: account.rs  asset.rs  block.rs  committee.rs  crypto.rs  error.rs  hash_clock.rs  lib.rs  new_transaction.rs  node.rs  order_book.rs  orderbook.rs  proto.rs  serialization.rs  spot.rs  transaction.rs  utils.rs
(+2287 files in other folders)
