[workspace]
members = [
    "core",
    "cli",
    "engine",
    "controller",
    "node",
    "suite",
    "types",
    "benchmark-gdex",
    # TODO - revive benchmark-narwhal workflow
    # "benchmark-narwhal",
    "workspace-hack"
]

[profile.flamegraph-profiling]
inherits = "release"
debug = true