[package]
name = "benchmark-gdex"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"

[dependencies]
# generic crates
anyhow = "1.0.58"
arc-swap = { version = "1.5.1", features = ["serde"] }
async-trait = "0.1.56"
bincode = "1.3.3"
bytes = "1.2.0"
cfg-if = "1.0.0"
clap = "2.34"
futures = "0.3.21"
multiaddr = "0.14.0"
rand =  "0.8.5"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = { version = "0.7.3", features = ["codec"] }
tracing = "0.1.35"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["time", "env-filter"] }
url = "2.2.2"
log = "0.4"
dhat = { version = "0.3.0", optional = true }
axum = "0.5.15"
tempfile = "3.3.0"
tonic = { version = "0.7.2", features = ["tls"] }
prometheus = "0.13.1"

# mysten crates
narwhal-node = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "node" }
narwhal-config = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "config" }
narwhal-consensus = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "consensus" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "crypto" }
narwhal-executor = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "executor" }
narwhal-primary = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "primary" }
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "types" }
narwhal-worker = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "worker" }
narwhal-network = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "network" }
store = { git = "https://github.com/mystenlabs/mysten-infra.git", package = "typed-store", rev = "7ef7415a4e11cf68fa68ce9db884c46e704e0445" }
telemetry-subscribers = { git = "https://github.com/mystenlabs/mysten-infra.git", rev = "7ef7415a4e11cf68fa68ce9db884c46e704e0445" }

# local crates
gdex-core = { path = "../core" }
gdex-controller = { path = "../controller" }
gdex-types = { path = "../types" }
gdex-workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
ed25519-dalek = "1.0.1"
hex = "0.4.3"
pretty_assertions = "1.2.1"
serde-reflection = "0.3.6"
serde_yaml = "0.8.26"
structopt = "0.3.26"
test_utils = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "test_utils" }
mysten-network = { git = "https://github.com/mystenlabs/mysten-infra.git", rev = "7ef7415a4e11cf68fa68ce9db884c46e704e0445" }

[features]
benchmark = ["narwhal-worker/benchmark", "narwhal-primary/benchmark", "narwhal-consensus/benchmark"]
dhat-heap = ["dhat"]    # if you are doing heap profiling

[[bin]]         
name = "benchmark_gdex_client"   
path = "src/benchmark_gdex_client.rs" 
required-features = ["benchmark"]

[[bin]]         
name = "benchmark_orderbook_client"   
path = "src/benchmark_orderbook_client.rs" 
required-features = ["benchmark"]