[package]
name = "gdex-cli"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
colored = "2.0.0"
clap = { version = "3.1.17", features = ["derive"] }
rand = { version = "0.7.3" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/mysten-infra", rev = "a4c2cae59d823533061a5d8fe28771629819c43f" }
tempfile = "3.3.0"
tokio = { version = "1.20.1", features = ["full", "tracing", "test-util"] }
tracing = "0.1.36"

gdex-core = { path = "../core" }
gdex-types = { path = "../types" }
gdex-workspace-hack = { path = "../workspace-hack" }

[[bin]]
name = "gdex"
path = "src/main.rs"
