[package]
name = "gdex-cli"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
colored = "2.0.0"
clap = { version = "3.1.17", features = ["derive"] }
multiaddr = "0.14.0"
rand =  "0.8.5"
tempfile = "3.3.0"
tokio = { version = "1.20.1", features = ["full", "tracing", "test-util"] }
tracing = "0.1.36"

# mysten crates
telemetry-subscribers = { git = "https://github.com/MystenLabs/mysten-infra", rev = "8d090689be14078f2ca41c356e7bbc0af21f73ab" }

# local crates
gdex-core = { path = "../core" }
gdex-types = { path = "../types" }
gdex-workspace-hack = { path = "../workspace-hack" }
tonic = "0.7"
prost = "0.10"

[[bin]]
name = "gdex"
path = "src/main.rs"
