[package]
name = "gdex-core"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
arc-swap = "1.5.1"
async-trait = "0.1.57"
bcs = "0.1.3"
camino = "1.0.9"
clap = { version = "3.1.17", features = ["derive"] }
dirs = "4.0.0"
futures = "0.3.21"
multiaddr = "0.14.0"
narwhal-config = { git = "https://github.com/MystenLabs/narwhal", rev = "259a37b487570763575e6b28f8b8057b16b3e916", package = "config" }
narwhal-node = { git = "https://github.com/MystenLabs/narwhal", rev = "259a37b487570763575e6b28f8b8057b16b3e916", package = "node" }
once_cell = "1.11.0"
prometheus = "0.13.1"
rand = "0.7.3"
serde = { version = "1.0.141", features = ["derive"] }
serde_yaml = "0.8.26"
serde_with = { version = "1.14.0", features = ["hex"] }
signature = "1.5.0"
tokio = { version = "1.20.1", features = ["full", "tracing", "test-util"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = "0.7"
tonic-health = "0.6.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace", "set-header", "propagate-header"] }
tracing = "0.1.36"
tempfile = "3.3.0"

gdex-proc = { path = "../proc" }
gdex-server = { path = "../server" }
gdex-types = { path = "../types" }
gdex-workspace-hack = { path = "../workspace-hack" }