[package]
name = "gdex-core"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
arc-swap = "1.5.1"
async-trait = "0.1.57"
axum = "0.5.13"
bcs = "0.1.3"
camino = "1.0.9"
clap = { version = "3.1.17", features = ["derive"] }
dirs = "4.0.0"
futures = "0.3.21"
http = { version = "0.2.8" }
multiaddr = "0.14.0"
once_cell = "1.11.0"
prometheus = "0.13.1"
rand =  "0.8.5"
serde = { version = "1.0.141", features = ["derive"] }
serde_yaml = "0.8.26"
serde_with = { version = "1.14.0", features = ["hex"] }
signature = "1.5.0"
tokio = { version = "1.20.1", features = ["full", "tracing", "test-util"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = "0.7"
tonic-health = "0.6.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace", "set-header", "propagate-header"] }
tracing = "0.1.36"
tracing-subscriber = "0.2.0"
tempfile = "3.3.0"
bincode = "1.3.3"

# mysten crates
narwhal-config = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "config" }
narwhal-consensus = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "consensus" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "crypto" }
narwhal-executor = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "executor" }
narwhal-node = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "node" }
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "types" }
mysten-store = { git = "https://github.com/mystenlabs/mysten-infra.git", package = "typed-store", rev = "8d090689be14078f2ca41c356e7bbc0af21f73ab" }

# local crates
gdex-controller = { path = "../controller" }
gdex-types = { path = "../types", feature = "testing"}
gdex-workspace-hack = { path = "../workspace-hack" }