[package]
name = "gdex-crypto-derive"
version = "0.0.2"
authors = ["GDEX Association <opensource@diem.com>"]
description = "GDEX custom derives for `gdex-crypto`"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.64", features = ["derive"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
diem-workspace-hack = { path = "../workspace-hack" }

[dev-dependencies]
anyhow = "1.0.38"
