[package]
name = "diem-crypto"
version = "0.0.2"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem diem-crypto"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bytes = "1.0.1"
curve25519-dalek = { version = "3" }
digest = "0.9.0"
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
hex = "0.4.3"
once_cell = "1.7.2"
mirai-annotations = "1.10.1"
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rand = "0.7.0"
rand_core = { version = "0.6.3" }
serde = { version = "1.0.124", features = ["derive"] }
serde_bytes = "0.11.5"
serde-name = "0.1.1"
sha2 = "0.9.3"
static_assertions = "1.1.0"
thiserror = "1.0.24"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
x25519-dalek = { version = "1.2.0" }
aes-gcm = "0.8.0"
diem-crypto-derive = { path = "../crypto-derive", version = "0.0.2" }
bcs = "0.1.2"

[dev-dependencies]
bitvec = "0.19.4"
byteorder = "1.4.3"
proptest = "1.0.0"
proptest-derive = "0.3.0"
ripemd160 = "0.9.1"
criterion = "0.3.4"
sha3 = "0.9.1"
serde_json = "1.0.64"
trybuild = "1.0.41"
diem-workspace-hack = { path = "../workspace-hack" }
      
[features]
default = ["u64"]
batch = []
assert-private-keys-not-cloneable = []
cloneable-private-keys = []
fuzzing = ["proptest", "proptest-derive", "cloneable-private-keys"]
u64 = ["curve25519-dalek/u64_backend", "ed25519-dalek/u64_backend", "x25519-dalek/u64_backend"]
u32 = ["curve25519-dalek/u32_backend", "ed25519-dalek/u32_backend", "x25519-dalek/u32_backend"]
avx2 = ["curve25519-dalek/avx2_backend"]

