[package]
name = "gdex-node"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
clap = "2.34"
futures = "0.3.21"
multiaddr = "0.14.0"
telemetry-subscribers = { git = "https://github.com/MystenLabs/mysten-infra", rev = "a4c2cae59d823533061a5d8fe28771629819c43f" }
tokio = { version = "1.20.1", features = ["full", "tracing", "test-util", "macros", "rt-multi-thread"] }
tracing = "0.1.36"
tonic = "0.7"
prost = "0.10"
gdex-types = { path = "../types" }
gdex-core = { path = "../core" }
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "259a37b487570763575e6b28f8b8057b16b3e916", package = "types" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "259a37b487570763575e6b28f8b8057b16b3e916", package = "crypto", features=["copy_key"]}
tempfile = "3.3.0"
hex = "0.4.3"
gdex-cli = { path = "../cli" }

[build-dependencies]
tonic-build = "0.7"

[[bin]]
name = "faucet-server"
path = "src/faucet_server.rs"


