[package]
name = "gdex-node"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
clap = "2.34"
futures = "0.3.21"
multiaddr = "0.14.0"
tokio = { version = "1.20.1", features = ["full", "tracing", "test-util"] }
tonic = "0.7"
prost = "0.10"
hex = "0.4.3"
tracing = "0.1.36"

# mysten crates
telemetry-subscribers = { git = "https://github.com/MystenLabs/mysten-infra", rev = "8d090689be14078f2ca41c356e7bbc0af21f73ab" }
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "types" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "crypto"}

# local crates
gdex-core = { path = "../core" }
gdex-types = { path = "../types" }

[[bin]]
name = "faucet-server"
path = "src/faucet_server.rs"