[package]
name = "gdex-server"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
async-trait = "0.1.57"
anyhow = "1.0.58"
bincode = "1.3.3"
bytes = "1.2.1"
http = "0.2.8"
multiaddr = "0.14.0"
futures = "0.3.21"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.1", features = ["sync", "rt", "macros"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = { version = "0.7.2", features = ["transport"] }
tonic-health = "0.6.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace", "set-header", "propagate-header"] }

gdex-types = { path = "../types" }
gdex-workspace-hack = { path = "../workspace-hack" }

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic.git", rev = "de2e4ac077c076736dc451f3415ea7da1a61a560", default-features = false, features = [ "transport" ] }
