[package]
name = "gdex-suite"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
bcs = "0.1.2"
bincode = "1.3.3"
criterion = { version = "0.3.5", features = ["async_tokio"] }
rand =  "0.8.5"
rocksdb = { version = "0.19", default-features = false, features = ["lz4", "multi-threaded-cf", "snappy", "zlib", "zstd"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.2.0"

# mysten crates
narwhal-config = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "config"}
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "crypto", features=["copy_key"]}
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "types" }
telemetry-subscribers = { git = "https://github.com/mystenlabs/mysten-infra.git", rev = "8d090689be14078f2ca41c356e7bbc0af21f73ab" }

# local crates
gdex-core = { path = "../core", features=["testing"] }
gdex-engine = { path = "../engine" }
gdex-controller = { path = "../controller" }
gdex-types = { path = "../types", features=["testing"] }
gdex-workspace-hack = { path = "../workspace-hack" }

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "serialization"
harness = false