[package]
name = "gdex-suite"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
bcs = "0.1.2"
bincode = "1.3.3"
criterion = { version = "0.3.5", features = ["async_tokio"] }
hex = "0.4.3"
rand =  "0.8.5"
rocksdb = { version = "0.19", default-features = false, features = ["lz4", "multi-threaded-cf", "snappy", "zlib", "zstd"] }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.85"
tempfile = "3.3.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.7"
tracing = "0.1.36"

# mysten crates
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c022a2ae23ca7cc2778293fd3b1db42e8cd02d3b" }
narwhal-config = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "config"}
narwhal-consensus = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "consensus" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "crypto"}
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "types" }

# local crates
gdex-core = { path = "../core", features=["testing"] }
gdex-engine = { path = "../engine" }
gdex-controller = { path = "../controller" }
gdex-node = { path = "../node" }
gdex-types = { path = "../types", features=["testing"] }
gdex-workspace-hack = { path = "../workspace-hack" }

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "serialization"
harness = false