[package]
name = "gdex-types"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
async-trait = "0.1.57"
base64ct = { version = "1.5.1", features = ["std", "alloc"] }
bincode = "1.3.3"
blake2 = { version = "0.9", features = ["std"] }
digest = "0.10.3"
hex = "0.4.3"
itertools = "0.10.3"
multiaddr = "0.14.0"
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "crypto", features=["copy_key"]}
narwhal-executor = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "executor" }
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "e54611ee0387735b1963eecfc4fdc120ee8ac509", package = "types" }
prost = "0.10.4"
rand = { version = "0.8.5" }
signature = "1.5.0"
schemars = "0.8.10"
sha3 = "0.10.2"
serde = { version = "1.0.139", features = ["derive"] }
serde_with = { version = "1.14.0", features = ["hex"] }
serde_json = "1.0.82"
sui-types = { git = "https://github.com/MystenLabs/sui", rev = "fa9fbc7c507b5ed305ac47f44c5c3d5025968d98", package = "sui-types" }
thiserror = "1.0.31"
tonic = { version = "0.7.2", features = ["tls"] }
tracing = "0.1.36"
tracing-subscriber = "0.2.0"

# local crates
gdex-workspace-hack = { path = "../workspace-hack" }

[build-dependencies]
prost-build = "0.10.4"
rustversion = "1.0.9"
tonic-build = { version = "0.7.2", features = [ "prost", "transport" ] }

[features]
testing = []