[package]
name = "fermi-node"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
clap = "2.34"
futures = "0.3.21"
multiaddr = "0.14.0"
tokio = { version = "1.20.1", features = ["full", "tracing", "test-util"] }
tonic = "0.7"
prost = "0.10"
hex = "0.4.3"
tracing = "0.1.36"

# mysten crates
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c022a2ae23ca7cc2778293fd3b1db42e8cd02d3b" }
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "types" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "crypto"}
telemetry-subscribers = { git = "https://github.com/MystenLabs/mysten-infra", rev = "7ef7415a4e11cf68fa68ce9db884c46e704e0445" }
# local crates
# TODO - remove benchmark flag in the future
fermi-core = { path = "../core", features = ["benchmark"] }
fermi-types = { path = "../types" }
fermi-controller = { path = "../controller" }

[[bin]]
name = "faucet-server"
path = "src/faucet_server.rs"
