[package]
name = "gdex-controller"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
async-trait = "0.1.57"
bincode = "1.3.3"
bytes = "1.2.1"
jsonrpsee = { version = "0.15.1", features = ["full"] }
jsonrpsee-core = "0.15.1"
jsonrpsee-proc-macros = "0.15.1"
prost = "0.10.4"
rand =  "0.8.5"
schemars = "0.8.10"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.83"
tracing = "0.1.36"

# mysten crates
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c022a2ae23ca7cc2778293fd3b1db42e8cd02d3b" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "crypto"}
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "c045e2da531f84962ac0b80c33a884f1dd751094", package = "types"}
sui-open-rpc-macros = { git = "https://github.com/MystenLabs/sui", rev = "cdfeb12391cfac5ce2ba2e245673beaa3f674219", package = "sui-open-rpc-macros" }
sui-open-rpc = { git = "https://github.com/MystenLabs/sui", rev = "cdfeb12391cfac5ce2ba2e245673beaa3f674219", package = "sui-open-rpc" }
sui-json-rpc = { git = "https://github.com/MystenLabs/sui", rev = "cdfeb12391cfac5ce2ba2e245673beaa3f674219", package = "sui-json-rpc" }

# local crates
gdex-types = { path = "../types", features=["testing"] }
gdex-workspace-hack = { path = "../workspace-hack" }

[build-dependencies]
prost-build = "0.10.4"
rustversion = "1.0.9"
tonic-build = { version = "0.7.2", features = [ "prost", "transport" ] }

[features]
testing = []